# lawn-home

./: .coveragerc  .isort.cfg  CHANGELOG.md  Makefile  README.md  pyproject.toml  tox.ini
lawnhome/: __init__.py  apps.py  auth_hooks.py  urls.py  views.py
lawnhome/migrations/: 0001_initial.py
lawnhome/templates/example/: index.html
testauth/settings/: local.py
