[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "lawn-home"
description = "Lawn Home Page"
readme = "README.md"
keywords = [ "allianceauth", "lawn-home" ]
license = { file = "LICENSE" }
authors = [ { name = "Swashman", email = "jnelson2288@gmail.com" } ]
requires-python = ">=3.10"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dynamic = [ "version" ]
dependencies = [ "allianceauth<5,>=4" ]
urls.Changelog = "https://github.com/swashman/lawn-home/blob/master/CHANGELOG.md"
urls."Issue / Bug Reports" = "https://github.com/swashman/lawn-home/issues"

[tool.hatch.version]
path = "lawnhome/__init__.py"

[tool.hatch.build]
include = [ "/lawnhome" ]
